# Lunara

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  workflow.mjs.template
crates/lunara-cli/: Cargo.toml
crates/lunara-cli/src/: main.rs
crates/lunara-core/: Cargo.toml  README.md
crates/lunara-core/src/: config.rs  git.rs  lib.rs
docs/: lunara_v_0_1.md
