[package]
name = "lunara-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for Lunara: a safe, repeatable, multi-language workflow tool."
repository = ""

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
gix = { version = "0.63", default-features = true }
